barcodes file uploaded

--- a/notebook_Vib1_demultiplexing.ipynb
+++ b/notebook_Vib1_demultiplexing.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b01bc942e535913ee42747b8216a31c596d568ac60a5bea62a426863b0acfb33"
+  "signature": "sha256:480e5f9b940792560cf0ef24d3bfe4a90a422fd3110deedbf53012516ab7b884"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,8 +15,7 @@
       "# Viburnum RADseq project\n",
       "### Notebook 1: Demultiplexing  \n",
       "\n",
-      "-----------------------   \n",
-      "\n"
+      "-----------------------   \n"
      ]
     },
     {
@@ -24,7 +23,7 @@
      "metadata": {},
      "source": [
       "### Organization  \n",
-      "This notebook uses the barcodes file and the raw RADseq data to separate the data into separate files for each individual sample in the data set. We use _pyRAD_ (v.2.15), allowing for one base mismatch. The reads are 100 bp long generated on Illumina HiSEQ, and the barcodes are 10 bp long. The RAD library was prepared by Floragenex Inc., using the PstI enzyme.  "
+      "This notebook shows how we demultiplexed sequence reads from two lanes of Illumina HiSEQ data into separate files for 95 samples based on their attached barcodes. To do this we use _pyRAD_ (v.2.15) and  allow for one base mismatch when matching barcodes. The reads are 100 bp with a 10 bp barcode followed by a 5bp restriction site, and then 85 bp of sequence data. The RAD library was prepared by Floragenex Inc., using the PstI enzyme.  "
      ]
     },
     {
@@ -32,20 +31,20 @@
      "collapsed": false,
      "input": [
       "%%bash\n",
-      "## create a working directory for data assembly\n",
-      "mkdir -p demultiplex1/\n",
-      "mkdir -p demultiplex2/"
+      "## create a working directory in which to store the demultiplexed data\n",
+      "## In this case we are using a location on the Omega HPC cluster at Yale\n",
+      "mkdir -p /home/fas/donoghue/de243/Viburnums/"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 17
+     "outputs": []
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Setup the params file for demultiplexing"
+      "### Create a template params file  \n",
+      "This file tells _pyRAD_ where to find the data and barcodes files, in addition to all other parameters used for data assembly, but here we will only need to worry about setting a few options."
      ]
     },
     {
@@ -53,21 +52,30 @@
      "collapsed": false,
      "input": [
       "%%bash\n",
-      "## create template params file\n",
-      "~/Dropbox/pyrad-git/pyRAD -n"
+      "## create template params file to use for this analysis\n",
+      "~/pyrad_v.2.15/pyRAD -n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "output_type": "stream",
-       "stream": "stdout",
+       "stream": "stderr",
        "text": [
-        "\tfile params.txt already exists\n"
+        "\tnew params.txt file created\n"
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Setup the params file for demultiplexing\n",
+      "\n",
+      "The code below will substitute new values into the params file, or you could enter these by hand using a text editor. The raw data from two lanes of sequencing are currently stored in 72 compressed files in the location that is set on line 2 in the params file (on the Omega server at Yale). The \"\\*.gz\" ending indicates it will select all files ending with \".gz\". The barcodes file which matches sample names to their barcodes is in the location set on line 3 of the file. "
+     ]
     },
     {
      "cell_type": "code",
@@ -75,14 +83,22 @@
      "input": [
       "%%bash\n",
       "## substitute new params into file\n",
-      "sed -i '/## 1. /c\\demultiplex1/           ## 1. working directory ' params.txt\n",
-      "sed -i '/## 2. /c\\/home/deren/Documents/RADSEQ_DATA/Viburnums/data1/*.gz        ##2. data loc. ' params.txt\n",
-      "sed -i '/## 3. /c\\/home/deren/Documents/RADSEQ_DATA/barcodes/Viburnum.barcodes  ##3. barcodes ' params.txt"
+      "sed -i '/## 1. /c\\/home/fas/donoghue/de243/Viburnums/                   ## 1. working directory ' params.txt\n",
+      "sed -i '/## 2. /c\\/home/fas/donoghue/de243/RADSEQ_DATA/Viburnums/*.gz   ## 2. raw data loc. ' params.txt\n",
+      "sed -i '/## 3. /c\\/home/fas/donoghue/de243/RADSEQ_DATA/barcodes/Viburnum.barcodes  ## 3. barcodes loc. ' params.txt\n",
+      "sed -i '/## 7. /c\\20                          ## 7. N processors  ' params.txt"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 33
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### View the params file"
+     ]
     },
     {
      "cell_type": "code",
@@ -99,48 +115,32 @@
        "stream": "stdout",
        "text": [
         "==== parameter inputs for pyRAD version 2.15  ============================  affected step ==\n",
-        "demultiplex1/           ## 1. working directory \n",
-        "/home/deren/Documents/RADSEQ_DATA/Viburnums/data1/*.gz ##2. data loc. \n",
-        "/home/deren/Documents/RADSEQ_DATA/barcodes/Viburnum.barcodes ##3. barcodes \n",
+        "/home/fas/donoghue/de243/Viburnums/                   ## 1. working directory \n",
+        "/home/fas/donoghue/de243/RADSEQ_DATA/Viburnums/*.gz   ## 2. raw data loc. \n",
+        "/home/fas/donoghue/de243/RADSEQ_DATA/barcodes/Viburnum.barcodes  ## 3. barcodes loc. \n",
         "usearch7.0.1090_i86linux32  ## 4. command (or path) to call usearch v.7             (s3,s6)\n",
         "muscle                      ## 5. command (or path) to call muscle                  (s3,s7)\n",
         "TGCAG                       ## 6. restriction overhang (e.g., C|TGCAG -> TGCAG)     (s1,s2)\n",
-        "20                     ## 7. N processors      \n",
-        "6                      ## 8. MinDepth          \n",
-        "5                      ## 9. NQual             \n",
-        ".85                    ## 10. clust threshold  \n",
+        "20                          ## 7. N processors  \n",
+        "6                           ## 8. Mindepth: min coverage for a cluster              (s4,s5)\n",
+        "4                           ## 9. NQual: max # sites with qual < 20 (line 20)       (s2)\n",
+        ".88                         ## 10. Wclust: clustering threshold as a decimal        (s3,s6)\n",
         "rad                         ## 11. Datatype: rad,gbs,ddrad,pairgbs,pairddrad,merge  (all)\n",
         "4                           ## 12. MinCov: min samples in a final locus             (s7)\n",
         "3                           ## 13. MaxSH: max inds with shared hetero site          (s7)\n",
-        "c85d6m4p3              ## 14. outname          \n",
+        "c88d6m4p3                   ## 14. prefix name for final output (no spaces)         (s7)\n",
         "==== optional params below this line ===================================  affected step ==\n"
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 34
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Demultiplex lane 1"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "stderr = ! ~/Dropbox/pyrad-git/pyRAD -p params.txt -s 1"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "### Setup the params file for demultiplexing lane 2"
+      "### Demultiplex (step 1) in _pyRAD_  \n",
+      "If running on a dedicated workstation you could simply run the command below, which is commented out. Because we are using an HPC cluster I will submit is instead within a `qsub` job submission form. "
      ]
     },
     {
@@ -148,10 +148,7 @@
      "collapsed": false,
      "input": [
       "%%bash\n",
-      "## substitute new params into file\n",
-      "sed -i '/## 1. /c\\demultiplex2           ## 1. working directory ' params.txt\n",
-      "sed -i '/## 2. /c\\/home/deren/Documents/RADSEQ_DATA/Viburnums/data2/*.gz   ##2. data loc. ' params.txt\n",
-      "sed -i '/## 3. /c\\/home/deren/Documents/RADSEQ_DATA/barcodes/Viburnum.barcodes  ##3. barcodes ' params.txt"
+      "#~/pyrad_v.2.15/pyRAD -p params.txt -s 1"
      ],
      "language": "python",
      "metadata": {},
@@ -161,24 +158,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Demultiplex lane 2"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "stderr = ! ~/Dropbox/pyrad-git/pyRAD -p params.txt -s 1"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "### Results of demultiplexing lane 1"
+      "### Create a qsub job submission form for HPC  \n",
+      "This will save the text string below to the file \"qsub_script.sh\""
      ]
     },
     {
@@ -186,52 +167,90 @@
      "collapsed": false,
      "input": [
       "%%bash\n",
-      "head -n 100 demultiplex/stats/s1.sorting.txt"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "### Results of demultiplexing lane 2"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "%%bash\n",
-      "head -n 100 demultiplex/stats/s2.sorting.txt"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "### Combine the two libraries"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "## make a directory for the demultiplexed files\n",
-      "! mkdir -p /home/deren/Documents/RADSEQ_DATA/Viburnums/demultiplexed/\n",
       "\n",
-      "## combine the files\n",
-      "import glob\n",
-      "for sample in glob.glob(\"demultiplex1/*.gz\"):\n",
-      "    f1 = ###\n"
+      "echo \"\n",
+      "#!/bin/sh \n",
+      "\n",
+      "### Set the job name\n",
+      "#PBS -N demultiplex\n",
+      "\n",
+      "### Combine standard error and standard out to one file.\n",
+      "#PBS -j oe\n",
+      "\n",
+      "### Have PBS mail you results\n",
+      "#PBS -m ae\n",
+      "#PBS -M deren.eaton@yale.edu\n",
+      "\n",
+      "### Specify the queue name. \n",
+      "#PBS -q fas_high\n",
+      "\n",
+      "### Specify N processors & N nodes.\n",
+      "#PBS -l procs=20,tpn=1\n",
+      "\n",
+      "### Load necessary modules\n",
+      "module load Langs/Python/2.7.2 \n",
+      "module load Libs/NUMPY/1.8.1\n",
+      "module load Libs/SCIPY/0.14.0\n",
+      "\n",
+      "### Run the pyRAD job\n",
+      "~/pyrad_v.2.15/pyRAD -p params.txt -s 1\n",
+      "\n",
+      "\" > qsub_script.sh"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Submit the job"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%bash\n",
+      "qsub qsub_script.sh"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### View the results of demultiplexing  \n",
+      "This will have created two new directories in the working directory you designated on line 1 of the params file. A fastq/ directory will contain the demultiplexed data files, and a stats/ directory will contain a file with statistics about how many reads were demultiplexed for each sample. I show the stats file for our data set below. "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%bash\n",
+      "head -n 100 /home/fas/donoghue/de243/Viburnums/stats/s1.sorting.txt"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Notebook 1 finished"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "These are the files that will be uploaded to the NCBI sequence read archive, and which we will used to assemble the data set in [Notebook 2](link) of this project. "
+     ]
     }
    ],
    "metadata": {}
