--- a/notebook_Vib1_demultiplexing.ipynb
+++ b/notebook_Vib1_demultiplexing.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:480e5f9b940792560cf0ef24d3bfe4a90a422fd3110deedbf53012516ab7b884"
+  "signature": "sha256:b5c09b31fd3d13f1fea09805258f5ae44ca21e6d9c00d11483bd4b956b90f387"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -52,7 +52,9 @@
      "collapsed": false,
      "input": [
       "%%bash\n",
-      "## create template params file to use for this analysis\n",
+      "## Create template params file to use for this analysis.\n",
+      "## If using an HPC cluster you may need to load Python,\n",
+      "## Numpy and Scipy modules before calling pyrad\n",
       "~/pyrad_v.2.15/pyRAD -n"
      ],
      "language": "python",
@@ -185,7 +187,10 @@
       "#PBS -q fas_high\n",
       "\n",
       "### Specify N processors & N nodes.\n",
-      "#PBS -l procs=20,tpn=1\n",
+      "#PBS -l procs=20,tpn=1,mem=32gb\n",
+      "\n",
+      "### Specify wall-time\n",
+      "#PBS -l walltime=6:00:00\n",
       "\n",
       "### Load necessary modules\n",
       "module load Langs/Python/2.7.2 \n",
@@ -224,19 +229,8 @@
      "metadata": {},
      "source": [
       "### View the results of demultiplexing  \n",
-      "This will have created two new directories in the working directory you designated on line 1 of the params file. A fastq/ directory will contain the demultiplexed data files, and a stats/ directory will contain a file with statistics about how many reads were demultiplexed for each sample. I show the stats file for our data set below. "
+      "This will have created two new directories in the working directory we designated on line 1 of the params file. A fastq/ directory contains the demultiplexed data files, and a stats/ directory contains a file with statistics about how many reads were demultiplexed for each sample. "
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "%%bash\n",
-      "head -n 100 /home/fas/donoghue/de243/Viburnums/stats/s1.sorting.txt"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -249,7 +243,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "These are the files that will be uploaded to the NCBI sequence read archive, and which we will used to assemble the data set in [Notebook 2](link) of this project. "
+      "The compressed demultiplexed data files in the fastq/ directory are the ones that will be uploaded to the NCBI sequence read archive, and which we will used to assemble the data set in [Notebook 2](link) of this project. "
      ]
     }
    ],
