--- a/notebook_Vib1_demultiplexing.ipynb
+++ b/notebook_Vib1_demultiplexing.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d3f79d75224dd5cc90ea5a5d5269aa53c15f5b1b611b27e50382f32b5cf94966"
+  "signature": "sha256:346aa43ddbce7fe8b5b7cd3aedf75ce5172fb5be801a05470e9265a111fc946e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -243,7 +243,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The compressed demultiplexed data files in the fastq/ directory are the ones that will be uploaded to the NCBI sequence read archive, and which we will used to assemble the data set in [Notebook 2](link) of this project. "
+      "The compressed demultiplexed data files in the fastq/ directory are the ones that will be uploaded to the NCBI sequence read archive, and which we will used to assemble the data set in [Notebook 2](http://nbviewer.ipython.org/github/dereneaton/Vibs_RAD/blob/master/notebook_Vib2_assembly.ipynb) of this project. "
      ]
     }
    ],
