up to step 5 results

--- a/notebook_Vib2_assembly.ipynb
+++ b/notebook_Vib2_assembly.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b1f62cd32aaee0fcedbe66eab212883c7a8a8016a2e7556d7e0636050f20a517"
+  "signature": "sha256:40a78db0bc847391c7150c65a9b2108749f12c5584e10a050dae8f73d66b12ca"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -82,9 +82,9 @@
      "input": [
       "%%bash\n",
       "## substitute new params into file\n",
-      "sed -i '/## 1. /c\\/home/fas/donoghue/de243/Viburnums/                   ## 1. working directory ' params.txt\n",
+      "sed -i '/## 1. /c\\/home/fas/donoghue/de243/Viburnums/   ## 1. working directory ' params.txt\n",
       "sed -i '/## 7. /c\\20                          ## 7. N processors  ' params.txt\n",
-      "sed -i '/## 8. /c\\10                          ## 8. Mindepth  ' params.txt\n",
+      "sed -i '/## 8. /c\\6                           ## 8. Mindepth  ' params.txt\n",
       "sed -i '/## 9. /c\\4                           ## 9. NQual  ' params.txt\n",
       "sed -i '/## 10./c\\.88                         ## 10. NQual  ' params.txt\n",
       "sed -i '/## 18./c\\/home/fas/donoghue/de243/Viburnums/fastq/*.gz  ## 18. Demulti data loc. ' params.txt\n",
@@ -93,25 +93,6 @@
      "language": "python",
      "metadata": {},
      "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "### View the complete params file"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "%%bash\n",
-      "cat params.txt"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -139,7 +120,7 @@
       "#!/bin/sh \n",
       "\n",
       "### Set the job name\n",
-      "#PBS -N demultiplex\n",
+      "#PBS -N assembly\n",
       "\n",
       "### Combine standard error and standard out to one file.\n",
       "#PBS -j oe\n",
@@ -152,7 +133,7 @@
       "#PBS -q fas_high\n",
       "\n",
       "### Specify N processors & N nodes.\n",
-      "#PBS -l procs=48,tpn=1,mem=32gb\n",
+      "#PBS -l procs=20,tpn=1,mem=32gb\n",
       "\n",
       "### Specify wall-time\n",
       "#PBS -l walltime=6:00:00\n",
@@ -203,13 +184,10 @@
      "input": [
       "%%bash\n",
       "## First replace step2 with step3 in the qsub script\n",
-      "sed -i 'params.txt /c\\~/pyrad_v.2.15/pyRAD -p params.txt -s 3 ' qsub_script.sh\n",
+      "sed -i 's/-s 2/-s 3/g' qsub_script.sh\n",
       "\n",
-      "## Set the queue to a long running job queue\n",
-      "sed -i '-q /c\\#PBS -q fas_very_long ' qsub_script.sh\n",
-      "\n",
-      "## Set the walltime to 5 days\n",
-      "sed -i 'walltime/c\\#PBS -l walltime=120:00:00\n",
+      "## Set the walltime to 3 days\n",
+      "sed -i '/walltime/c\\#PBS -l walltime=72:00:00 ' qsub_script.sh\n",
       "\n",
       "## and then submit the job\n",
       "qsub qsub_script.sh"
@@ -222,7 +200,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Steps 4-5: Estimating heterozygosity & sequencing error  "
+      "### Step 4: Estimating heterozygosity & sequencing error  "
      ]
     },
     {
@@ -230,11 +208,138 @@
      "collapsed": false,
      "input": [
       "%%bash\n",
-      "## First replace step3 with steps4-5 in the qsub script\n",
-      "sed -i 'params.txt /c\\~/pyrad_v.2.15/pyRAD -p params.txt -s 45 ' qsub_script.sh\n",
+      "## First replace step3 with step4 in the qsub script\n",
+      "sed -i 's/-s 3/-s 4/g' qsub_script.sh\n",
       "\n",
       "## and then submit the job\n",
       "qsub qsub_script.sh"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Step 5: Calling consensus sequences  \n",
+      "For this we first remove the results for samples that are known polyploids so that base calls will be made at the estimated level of heterozygosity for diploids. We will later use the ploidy-aware GATK2 software to call genotypes for polyploids separately, but for now we treat them as diploids. "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%bash\n",
+      "## Using only data from known diploids according to Egolf (1956)\n",
+      "## we find the following H & E which we substitute into the params file\n",
+      "## rather than letting pyRAD take the value for all samples \n",
+      "sed -i '/## 22./c\\0.0004691,0.0056817         ## 22. E,H ' params.txt\n",
+      "\n",
+      "## First replace step4 with steps5 in the qsub script\n",
+      "sed -i 's/-s 4/-s 5/g' qsub_script.sh\n",
+      "\n",
+      "## and then submit the job\n",
+      "qsub qsub_script.sh"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Assembling data sets  \n",
+      "Analyses of these data will focus at three different levels:  \n",
+      "+  A backbone phylogeny of _Viburnum_  \n",
+      "+  A focus on _V. cassinoides_\n",
+      "+  A focus on _V. lantanoides_\n",
+      "+  A focus on ..."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### _V. lantanoides_ data set  \n",
+      "\n",
+      "We subselect only _V. cassinoides_ and a few outgroup samples. \n",
+      "\n",
+      "+ lantanoides_D14_Beartown_1,\n",
+      "+ lantanoides_D15_Beartown_2,\n",
+      "+ lantanoides_D16_Mohawk_2,\n",
+      "+ lantanoides_D_17_Mohawk_3,\n",
+      "+ sympodiale_D18_KFC_1932,\n",
+      "+ nervosum_C4_PWS_2298,\n",
+      "+ nervosum_C2_PWS_2288_2289,\n",
+      "+ furcatum_combined   \n",
+      "  \n",
+      "\n",
+      "+ carlesii_D1_BP_001\n",
+      "+ plicatum_C1_MJDJP_12\n",
+      "+ foetidum_D24_KFC_1942"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%bash\n",
+      "## enter subset of samples onto line 15\n",
+      "sed -i \"/## 15./c\\lantanoides_D14_Beartown_1,lantanoides_D15_Beartown_2,lantanoides_D16_Mohawk_2,lantanoides_D_17_Mohawk_3,sympodiale_D18_KFC_1932,nervosum_C4_PWS_2298,nervosum_C2_PWS_2288_2289,furcatum_combined,carlesii_D1_BP_001,plicatum_C1_MJDJP_12,foetidum_D24_KFC_1942    ## 15. Subset selector \" params.txt\n",
+      "\n",
+      "## enter the output options\n",
+      "sed -i \"/## 14./c\\lantanoides_c88d6m4p3     ## 14. prefix \" params.txt\n",
+      "sed -i \"/## 30./c\\n,v,k                     ## 30. outformats \" params.txt"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%bash\n",
+      "## First replace step 5 with steps 6 & 7 in the qsub script\n",
+      "sed -i 's/-s 5/-s 67/g' qsub_script.sh\n",
+      "\n",
+      "## and then submit the job\n",
+      "qsub qsub_script.sh"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### _V. cassinoides_ data set  \n",
+      "\n",
+      "We will subselect only the samples of _V. cassinoides_ and a few close outgroup samples. "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "+ cassinoides_ELS2,\n",
+      "+ cassinoides_ELS29,\n",
+      "+ cassinoides_ELS3,\n",
+      "+ cassinoides_ELS50,\n",
+      "+ cassinoides_ELS77,\n",
+      "+ cassinoides_ELS79,\n",
+      "+ cassinoides_LS54,\n",
+      "+ cassinoides_YU08"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%bash\n"
      ],
      "language": "python",
      "metadata": {},
